src/test/ui/const-generics/issues/issue-61747.full.stderr
warning: the feature `const_generics` is incomplete and may not be safe to use and/or cause compiler crashes
  --> $DIR/issue-61747.rs:2:27
   |
LL | #![cfg_attr(full, feature(const_generics))]
   |                           ^^^^^^^^^^^^^^
   |
   = note: `#[warn(incomplete_features)]` on by default
   = note: see issue #44580 <https://github.com/rust-lang/rust/issues/44580> for more information
   = help: consider using `min_const_generics` instead, which is more stable and complete

error: constant expression depends on a generic parameter
  --> $DIR/issue-61747.rs:8:23
   |
LL |     fn successor() -> Const<{C + 1}> {
   |                       ^^^^^^^^^^^^^^
   |
   = note: this may fail depending on what value the parameter takes

error: aborting due to previous error; 1 warning emitted

